--- a/app/views/home/somos.html.erb
+++ b/app/views/home/somos.html.erb
@@ -1,7 +1,6 @@
-<h1>Quienes Somos</h1>
 
-<!-- Team -->
-<section id="team" class="pb-12" style = "margin-top: 8%; color:rgb(34, 102, 102);">
+
+<section id="team" class="pb-12" style = "color:white">
     <div class="container">
         <h5 class="section-title h1">Conoce al Dr. Jose Gil Abreu</h5>
         <div >
@@ -22,7 +21,7 @@
                             <div class="card">
                                 <div class="card-body text-center mt-4">
 
-                                    <p class="card-text">Jose Gil Abreu nacido en la República Dominicana. Curso sus
+                                    <p class="card-text" style = "color:black">Jose Gil Abreu nacido en la República Dominicana. Curso sus
                                         estudios básicos en su pais de nacimiento. Recibió su formación universitara
                                          en su patria que lo vio nacer la Rep. Dominicana como tambien en los Estados Unidos. Ha
                                         recidido en los EU los últimos quince anos de su vida. Es Psicólogo,
