--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 
 .img{
 width: 100%;
-max-height: 450px;
+max-height: 550px;
 } 
 
 
@@ -88,6 +88,7 @@ ytp-chrome-top, ytp-show-cards-title{
     font-size: 18px;
     /*   margin: 1rem 0; */
     text-transform: normal;
+    color:white;
 }
 
 @media screen and (max-width: 1099px) {
@@ -110,7 +111,7 @@ ytp-chrome-top, ytp-show-cards-title{
   }
 
 
-$size: 50px;
+$size: 75px;
 
 .social-share-button {
   .ssb-icon {
@@ -201,9 +202,7 @@ $size: 50px;
 }
 
 .text-footer{
-  
+  color:white
 }
-
-
 
 
