--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,26 +46,16 @@
 </a>
 </div>
 
-
- 
-<div class="container">
-    
-<div class="col-sm-9 sm-auto" style ="margin-top: 10%" >
+<div class="col-sm-9 sm-auto" style ="margin-top: 30%" >
     <div class= "col-sm">
-       <h3>COVID-19 Casos Confirmados en el estado de Pensylvannia</h3> 
-       <h5>Mapa por condado</h5>
+       <h3>Casos Confirmados COVID-19 has hoy</h3> 
+       <h5>Mapa Mundial</h5>
     </div>
-    <iframe src="https://www.google.com/maps/d/embed?mid=1lpLPPrltIuVkwFtXhoWdWEA4B1DvNmne" width="100%" height="600px">
+    <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map&year=2020-04-14" style="width: 100%; height: 600px; border: 0px none;"></iframe>
     </iframe>
 </div>
 
-</div>
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-</br>
 
 <div class = "container"  align="center" >
 
@@ -96,7 +86,7 @@
         <div class = "col-sm-12 col-md-12 mt-5 ">
             <h2><%= link_to 'Escucha nuestros audios de Orientacion Familiar !', uploads_index_path, style:"color:white; display:inline-block; margin-top: 15%" %></h2>
             <div class="">
-                     <%= link_to(image_tag("https://images.squarespace-cdn.com/content/v1/5615b7a4e4b05e4f5e8070da/1518379790417-42DFHOBCGCQ783EF9CXI/ke17ZwdGBToddI8pDm48kBXrJdfsMRHKueQcE3YThXxZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpzYkoUKubKpj3pxbyi0I5i6Xo1G_h2l_OWnXNaCdTo5FXmVWEEVQ6Z8Ep_G7sHlb8g/Headphone+selfie.jpg?" ,  class:"img-fluid ", style:"width:100%;height:800px; margin-top:2%; border-radius: 25px;"), uploads_index_path )  %>
+                     <%= link_to(image_tag("https://images.squarespace-cdn.com/content/v1/5615b7a4e4b05e4f5e8070da/1518379790417-42DFHOBCGCQ783EF9CXI/ke17ZwdGBToddI8pDm48kBXrJdfsMRHKueQcE3YThXxZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpzYkoUKubKpj3pxbyi0I5i6Xo1G_h2l_OWnXNaCdTo5FXmVWEEVQ6Z8Ep_G7sHlb8g/Headphone+selfie.jpg?" ,  class:"img-fluid ", style:"width:100%;height:550px; margin-top:2%; border-radius: 25px;"), uploads_index_path )  %>
                     <div class="overlay" style = "margin-top:45px;">
                        <h2><%= link_to 'Click para ir a Orientacion Familiar Audio podcats y Reflexiones', uploads_index_path, style:"color:white" %></h2>
                     </div>
