--- a/app/views/home/recursos.html.erb
+++ b/app/views/home/recursos.html.erb
@@ -1,4 +1,4 @@
-<h1>Recursos</h1>
+<h1 style = "color:white" >Recursos</h1>
 
 
 <div class="region--sidebar-second region region-sidebar-second">
@@ -55,5 +55,3 @@
 
 
 
-
-  </div>
