--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Seleccione de la lista para reproducir </h1>
+<h1 style= "color:white">Seleccione de la lista para reproducir </h1>
 <div class="container">
   <div class= "row">
   <% @uploads.each do |upload| %>
