--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -8,17 +8,16 @@
 </head>
 
 <body style = "color:white">
-    <h1 style="font-size:70px>Orientacion Familiar TV y Radio !</h1>
-     
 <div style="position: relative; left: 0; top: 0;">
 <div class = "container" style = "margin-top: 10%"  id= "youtube_frame" >
+    <h1> Orientacion Familiar TV !</h1>
 <div  class="elfsight-app-387ab003-542a-4beb-aaa0-0d17937f228c">
 </div>
 <h3 > Escucha nuestra transmision en vivo en los horarios 7-8:00 am y 7-8:00 pm en la honda radial Esperanza de vida 99.1 FM</h3>
         <div>
-            <%= image_tag("radio.jpg", alt: "Edit Entry", class:" col-sm-6", style:"") %>
+            <%= image_tag("radio.jpg", alt: "Edit Entry", class:" col-sm-6") %>
             <div >
-            <iframe src="https://cdn.voscast.com/player/player.php?host=s8.voscast.com&amp;port=8106" scrolling="no" width="150" height="30" frameborder="0" style="position:relative; display:inline-block; position:relative; border-radius: 20px;"></iframe>
+            <iframe src="https://cdn.voscast.com/player/player.php?host=s8.voscast.com&amp;port=8106" scrolling="no" width="150" height="30" frameborder="0" style="position:relative; display:inline-block; border-radius: 20px;"></iframe>
             </div>
          </div>
 
@@ -32,6 +31,8 @@
 
 <script>
 setTimeout(function(){
-youtube_frame.children[1].childNodes[3].childNodes[3].style.zIndex = 0;
+
+youtube_frame.children[2].childNodes[3].childNodes[3].style.zIndex = 0;
+youtube_frame.children[2].childNodes[2].childNodes[3].style.zIndex = 0;
 }, 5000);
 </script>
