--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,7 +115,7 @@
 
 <div class="container col-xs-12 col-sm-12 col-md-12" style= "background:rgb(34,102, 102); color:white">
 <!-- Footer -->
-  <section class= "" id="footer" style= "background:rgb(34,102, 102)" >
+  <section class= "footer" id="footer" style= "background:rgb(34,102, 102);padding-top: 25%;" >
     <div class="container ">
       <div class="row text-center text-xs-center text-sm-left text-md-left "  style= "background:rgb(34,102, 102)">
         <div class="col-xs-4 col-sm-4 col-md-4  ">
