social sharing updates

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-<%= rails_social_share_button_tag('Share to Facebook', url: home_index_path , desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+<%= rails_social_share_button_tag(home_index_path, url: home_index_path , desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
 </div>
 <div style = "margin-top = 50px">
@@ -46,10 +46,9 @@
 </a>
 </div>
 
-<div class="col-sm-9 sm-auto" style ="margin-top: 30%" >
+<div class="col-sm-9 sm-auto" style ="margin-top: 40%" >
     <div class= "col-sm">
-       <h3>Casos Confirmados COVID-19 has hoy</h3> 
-       <h5>Mapa Mundial</h5>
+       <h3 style= "color:white">Casos Confirmados COVID-19 has hoy. Mapa mundial</h3> 
     </div>
     <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map&year=2020-04-14" style="width: 100%; height: 600px; border: 0px none;"></iframe>
     </iframe>
