--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -1,6 +1,6 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-<%= rails_social_share_button_tag('Share to Facebook', url: @upload.url  , desc: @upload.title+" Audio reflexion") %>
+<%= rails_social_share_button_tag(@upload.url ,  url: @upload.url  , desc: @upload.title+" Audio reflexion") %>
 </div>
 </div>
 <h1>Orientacion Familiar Podcasts</h1>
