--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <h1 style= "color:white"> Articulos de Orientacion Familiar</h1>
     <div class= "d-flex justify-content-center">
     <div class=  "social-share-button">
-    <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
+    <%= rails_social_share_button_tag(posts_path, url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
     </div>
     </div>
 <br>
