--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -1,6 +1,7 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-<%= rails_social_share_button_tag(@upload.url ,  url: @upload.url  , desc: @upload.title+" Audio reflexion") %>
+    <%= rails_social_share_button_tag('Orientacion Familiar Audios', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+</div>
 </div>
 </div>
 <h1>Orientacion Familiar Podcasts</h1>
