--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-<%= rails_social_share_button_tag(home_index_path, url: home_index_path , desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+    <%= rails_social_share_button_tag('Orientacion Familiar Una Guia  Para El Hogar', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
 </div>
 <div style = "margin-top = 50px">
@@ -46,9 +46,9 @@
 </a>
 </div>
 
-<div class="col-sm-9 sm-auto" style ="margin-top: 40%" >
+<div class="col-sm-9 sm-auto" style ="margin-top: 60%" >
     <div class= "col-sm">
-       <h3 style= "color:white">Casos Confirmados COVID-19 has hoy. Mapa mundial</h3> 
+       <h3 style= "color:white">Mapa mundial de casos confirmados de COVID-19 hasta la fecha. </h3> 
     </div>
     <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map&year=2020-04-14" style="width: 100%; height: 600px; border: 0px none;"></iframe>
     </iframe>
@@ -85,7 +85,7 @@
         <div class = "col-sm-12 col-md-12 mt-5 ">
             <h2><%= link_to 'Escucha nuestros audios de Orientacion Familiar !', uploads_index_path, style:"color:white; display:inline-block; margin-top: 15%" %></h2>
             <div class="">
-                     <%= link_to(image_tag("https://images.squarespace-cdn.com/content/v1/5615b7a4e4b05e4f5e8070da/1518379790417-42DFHOBCGCQ783EF9CXI/ke17ZwdGBToddI8pDm48kBXrJdfsMRHKueQcE3YThXxZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpzYkoUKubKpj3pxbyi0I5i6Xo1G_h2l_OWnXNaCdTo5FXmVWEEVQ6Z8Ep_G7sHlb8g/Headphone+selfie.jpg?" ,  class:"img-fluid ", style:"width:100%;height:460px; margin-top:2%; border-radius: 25px;"), uploads_index_path )  %>
+                     <%= link_to(image_tag("https://images.squarespace-cdn.com/content/v1/5615b7a4e4b05e4f5e8070da/1518379790417-42DFHOBCGCQ783EF9CXI/ke17ZwdGBToddI8pDm48kBXrJdfsMRHKueQcE3YThXxZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpzYkoUKubKpj3pxbyi0I5i6Xo1G_h2l_OWnXNaCdTo5FXmVWEEVQ6Z8Ep_G7sHlb8g/Headphone+selfie.jpg?" ,  class:"img-fluid ", style:"width:100%;height:500px; margin-top:2%; border-radius: 25px;"), uploads_index_path )  %>
                     <div class="overlay" style = "margin-top:45px;">
                        <h2><%= link_to 'Click para ir a Orientacion Familiar Audio podcats y Reflexiones', uploads_index_path, style:"color:white" %></h2>
                     </div>
