--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -1,9 +1,9 @@
 <html>
 <head>
     <div class= "d-flex justify-content-center">
-    <div class=  "social-share-button">
-    <%= rails_social_share_button_tag('Share to Facebook', url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
-    </div>
+<div class=  "social-share-button">
+    <%= rails_social_share_button_tag('Orientacion Familiar Radio', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+</div>
     </div>
 </head>
 
