--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,8 +3,8 @@
 <h1 style= "color:white"> Articulos de Orientacion Familiar</h1>
     <div class= "d-flex justify-content-center">
     <div class=  "social-share-button">
-    <%= rails_social_share_button_tag(posts_path, url: root_path, desc: "Orientacion Familiar Una Guia Para El Hogar") %>
-    </div>
+    <%= rails_social_share_button_tag('Orientacion Familiar Una Guia Para El Hogar', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+</div>
     </div>
 <br>
 
