--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 
-<%= rails_social_share_button_tag('Share to Facebook', url: post_path(@post), desc: @post.main_title) %>
+<div class=  "social-share-button">
+    <%= rails_social_share_button_tag('Share to social media', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+</div>
 <img src="<%= @post.main_image_post_url %>" class="img-fluid" alt="Responsive image">
 <div class= 'h1'>
   <%= @post.main_title %>
