--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,3 +1,6 @@
+<div class=  "social-share-button">
+    <%= rails_social_share_button_tag('Share to social media', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+</div>
 <h1 style= "color:white">Seleccione de la lista para reproducir </h1>
 <div class="container">
   <div class= "row">
