whatsapp url fixed

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Orientacion Familiar Una Guia  Para El Hogar', url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+
+    <a href="whatsapp://send" data-text="Orientacion Familiar Una Guia para El Hogar, TV , Radio, Audio Podcast" data-href="" class="wa_btn wa_btn_s" style="display:block">Share</a>
 </div>
 </div>
 <div style = "margin-top = 50px">
@@ -179,6 +181,8 @@
 <script src="https://apps.elfsight.com/p/platform.js" data-turbolinks-permanent>
 
 </script>
+
+<script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="url/to/your/button/whatsapp-button.js";h.appendChild(s);}</script>
 
 </body>
 
