--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -151,9 +151,9 @@
     </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center" >
-          <p><u><a class="text-footer" href="https://www.nationaltransaction.com/">Orientacion Familiar es una 
+          <p><u><a class="text-footer" href='<%=request.original_url%>'>Orientacion Familiar es una 
           institucion registrada bajo la direccion general del Dr. Jose Gil Abreu e incorporada en Hazleton Pensylvannia Estados Unidos. </p>
-          <p class="h6">&copy All rights Reserved.<a class="text-green ml-2 text-footer" href="https://www.sunlimetech.com" target="_blank">Orientacion Familiar Una Guia Para El Hogar</a></p>
+          <p class="h6">&copy All rights Reserved.<a class="text-green ml-2 text-footer" href="<%=request.original_url%>" target="_blank">Orientacion Familiar Una Guia Para El Hogar</a></p>
         </div>
         </hr>
       </div>  
