styling updates and more

--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -2,16 +2,15 @@
 <head>
     <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-    <%= rails_social_share_button_tag('Orientacion Familiar Radio ' + request.original_url, url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+    <%= rails_social_share_button_tag('Orientacion Familiar TV y Radio ' + request.original_url, url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
-    </div>
-</head>
 
+</head>
 <body style = "color:white">
 <div style="position: relative; left: 0; top: 0;">
 <div class = "container" style = "margin-top: 10%"  id= "youtube_frame" >
     <h1> Orientacion Familiar TV !</h1>
-    <iframe src="http://www.youtube.com/embed/?listType=user_uploads&list=OrientacionFamiliarUnaguiaparaelhogar" width="480" height="400"></iframe>                   
+
 
 <div  class="elfsight-app-387ab003-542a-4beb-aaa0-0d17937f228c">
 </div>
