--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -4,8 +4,11 @@
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Orientacion Familiar TV y Radio ' + request.original_url, url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
+    </div>
 
 </head>
+     
+   
 <body style = "color:white">
 <div style="position: relative; left: 0; top: 0;">
 <div class = "container" style = "margin-top: 10%"  id= "youtube_frame" >
