--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,6 +218,10 @@ nav.share iframe {border:0; margin-top:0; padding-top:0;} /* if using medium siz
 *+html .fb-like{display:inline}/* ie7 inline block fix*/
 
 
+.navbar-nav .dropdown-menu {
+  position: relative !important;
+}
+
 
 /**
  * WhatsApp Sharing Button
