--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,6 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-    <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
-
-    <a href="whatsapp://send" data-text="Orientacion Familiar Una Guia para El Hogar, TV , Radio, Audio Podcast" data-href="" class="wa_btn wa_btn_s" style="display:block">Share</a>
+    <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
 </div>
 </div>
 <div style = "margin-top = 50px">
