--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Orientacion</title>
+    <title>Orientacion Familiar Una Guia para El Hogar</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,94 +10,79 @@
 <body >
 <div align= "center" >
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!------ Include the above in your HEAD tag ---------->
+</div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
 
   <a class="navbar-brand" href="#"><%= image_tag "banner_burned.png",  class: "icon" %></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon">
-
   </span>
   </button>
 
-
+  
   <div class="collapse navbar-collapse" id="navbarSupportedContent" >
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <div class="nav-link" href="#"><%= link_to 'Inicio', home_index_path, style:"font-size:1.4em" %><span class="sr-only">(current)</span></div>
+        <div class="nav-link" href="#"><%= link_to 'Inicio', home_index_path, style:"font-size:1.2em" %><span class="sr-only">(current)</span></div>
       </li>
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Mision', home_mision_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Mision', home_mision_path, style:"font-size:1.2em" %></div>
       </li>
        <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Audio Podcats', uploads_index_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Audio Podcats', uploads_index_path, style:"font-size:1.2em" %></div>
       </li>
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Blogs y Articulos', posts_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Blogs y Articulos', posts_path, style:"font-size:1.2em" %></div>
       </li>
 
       <li class="nav-item">
-        <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link" href="#"><%= link_to 'Contacto', home_contacto_path, style:"font-size:1.2em" %></div>
       </li>
       <li>
-       <div class="nav-link" href="#"> <%= link_to 'Recursos', home_recursos_path, style:"font-size:1.4em" %></div>
+       <div class="nav-link" href="#"> <%= link_to 'Recursos', home_recursos_path, style:"font-size:1.2em" %></div>
       </li>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Radio</a>
-          <a class="dropdown-item" href="#">TV</a>
-        </div>
       </li>
        <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'Quienes Somos', home_somos_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link " href="#"><%= link_to 'Quienes Somos', home_somos_path, style:"font-size:1.2em" %></div>
       </li>
       </li>
       
        <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'TV', home_radio_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link " href="#"><%= link_to 'TV', home_radio_path, style:"font-size:1.2em" %></div>
       </li>
       <li class="nav-item">
-        <div class="nav-link " href="#"><%= link_to 'Radio', home_radio_path, style:"font-size:1.4em" %></div>
+        <div class="nav-link " href="#"><%= link_to 'Radio', home_radio_path, style:"font-size:1.2em" %></div>
       </li>
-      <li class="nav-item ">
-         <% if user_signed_in? %>
-         <div class="nav-link " href="#">
-          <%= link_to 'Edit profile', edit_user_registration_path, style:"font-size:1.4em" %>
-           
-         </div>
-        <li class="nav-item "> 
-          <div class="nav-link " href="#">
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, style:"font-size:1.4em" %>
-            </div>
-          </li>
-        <% if current_user.avatar.attached? %>
-        <li class="nav-item "> 
-          <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;' ) %>
-          </li>
-        <% else %>
-          <li class="nav-item "> <%= image_tag('https://clipartart.com/images/login-background-images-clipart-1.jpg' , :style => 'border-right: 1px solid #000  ; width:60px; height:50px;  border-radius: 30px 30px;') %>
-            
-          </li>
-        <% end %>
-        <liclass ="nav-item "> Logged in as <strong><%= current_user.email %></strong>.</li>
-         <% else %>
-        <div class="nav-link " href="#"><%= link_to "Sign up", new_user_registration_path, style:"font-size:1.4em" %> 
-      </li>
-      <li class="nav-item">
-         <div class="nav-link " href="#"><%= link_to "Login", new_user_session_path, style:"font-size:1.4em"  %></div>
-
-        <% end %>
-   
      
     </ul>
  
   </div>
+   </li>
+  <div class="nav-item">
+        <div class="dropdown">
+
+    <% if user_signed_in? %>
+        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"aria-expanded="false" style = "font-size:1.2em;margin-left:-15px">Bienvenido ! <%= current_user.email %> <b class="caret"></b>
+        </a>
+        <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <!-- ADDED CLASS -->
+        <a class="dropdown-item" > <%= link_to "Logout", destroy_user_session_path, method: :delete , style:"font-size:1.2em" %></a>
+        <a class="dropdown-item" href="#"><%= link_to 'Edit profile', edit_user_registration_path , style:"font-size:1.2em"%></a>
+      </div>
+       
+    <%else %>
+        <a class="nav-link"> <%= link_to 'Sing In' , new_user_session_path, style:"font-size:1.2em" %> <b class="caret"></b>
+        </a>
+          <b class="caret"></b>
+    <%end %>
+  </div>
+      </div>
+    
 
 </nav>
-
-</div>
-
 
   </head>
 
@@ -112,8 +97,13 @@
     <%= yield %>
 </div>
 </body>
-<%= render_shareable %>
-<div class="container col-xs-12 col-sm-12 col-md-12" style= "background:rgb(34,102, 102); color:white">
+
+<div class="container col-xs-12 col-sm-12 col-md-12" style= "background:rgb(34,102, 102); color:white; padding-top: 20%">
+  <div align="center">
+    <%= render_shareable %>
+
+  </div>
+
 <!-- Footer -->
   <section class= "footer" id="footer" style= "background:rgb(34,102, 102);padding-top: 25%;" >
     <div class="container ">
@@ -168,7 +158,7 @@
 <script>
 setTimeout(function(){
 
-youtube_frame.children[2].childNodes[3].childNodes[3].style.zIndex = 0;
+//youtube_frame.children[2].childNodes[3].childNodes[3].style.zIndex = 0;
 youtube_frame.children[2].childNodes[2].childNodes[3].style.zIndex = 0;
 }, 5000);
 </script>
