--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -1,6 +1,6 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
-    <%= rails_social_share_button_tag(request.original_url + "  " + @upload.title , url: request.original_url + "  " + @upload.title, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+    <%= rails_social_share_button_tag(request.original_url + "  " + @upload.title , url: request.original_url + "  " + @upload.title, desc: @upload.title + " Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
 </div>
 </div>
 </div>
