--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -18,7 +18,7 @@
   </div>
   </br>
   <% if current_user && current_user.admin? %>
-  <%= link_to 'Nueva Grabacion o Postcast',  new_upload_path %>
+  <%= link_to 'Subir Nuevo Audio Postcast',  new_upload_path, style:"color:white;font-size:25px" %>
   <% end %>
 
 
