layout and index front end updates

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,18 +61,18 @@
     <div class="row">
 
         <div class = "col-sm-12 col-md-12 mt-5 ">
-            <h2><%= link_to 'Lunes a Viernes de 7:00 am a 8:00am y 7:00 pm a 8:00 pm  !', home_radio_path, style:"color:white" %></h2>
+            <h2><%= link_to 'Escuchanos en vivo de Lunes a Viernes de 7:00 am a 8:00am y 7:00 pm a 8:00 pm  !', home_radio_path, style:"color:white" %></h2>
             <div class="">
                      <%= link_to(image_tag("radio_image.jpg" ,  class:"img-fluid", style:"width:100%; border-radius: 25px;"), home_radio_path )  %>
                     <div class="overlay" style = "margin-top:45px">
-                       <h2><%= link_to 'Escuchanos en Orientacion Familiar Radio !', home_radio_path, style:"color:white" %></h2>
+                       <h2><%= link_to 'Orientacion Familiar Una Guia para el Hogar !', home_radio_path, style:"color:white" %></h2>
                     </div>
             </div>
             
         </div>
 
         <div class = "col-sm-12 col-md-12" style = "margin-top:20%" >
-            <h2><%= link_to 'Sintonizanos en Youtube ! Orientacion Familiar TV !', home_radio_path, style:"color:white" %></h2>
+            <h2><%= link_to ' Estamos en Youtube ! Orientacion Familiar TV !', home_radio_path, style:"color:white" %></h2>
             <div class="">
                      <%= link_to(image_tag("tv.png" ,  class:"img-fluid  ", style:"width:100%;   border-radius: 25px;"), home_radio_path )  %>
                     <div class="overlay" style = "margin-top:45px">
@@ -83,7 +83,7 @@
         </div>
          
         <div class = "col-sm-12 col-md-12 mt-5 ">
-            <h2><%= link_to 'Escucha nuestros audios de Orientacion Familiar !', uploads_index_path, style:"color:white; display:inline-block; margin-top: 15%" %></h2>
+            <h2><%= link_to 'Escucha nuestros audios en cualquier momento y desde cualquier dispositivo !', uploads_index_path, style:"color:white; display:inline-block; margin-top: 15%" %></h2>
             <div class="">
                      <%= link_to(image_tag("https://images.squarespace-cdn.com/content/v1/5615b7a4e4b05e4f5e8070da/1518379790417-42DFHOBCGCQ783EF9CXI/ke17ZwdGBToddI8pDm48kBXrJdfsMRHKueQcE3YThXxZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpzYkoUKubKpj3pxbyi0I5i6Xo1G_h2l_OWnXNaCdTo5FXmVWEEVQ6Z8Ep_G7sHlb8g/Headphone+selfie.jpg?" ,  class:"img-fluid ", style:"width:100%;height:500px; margin-top:2%; border-radius: 25px;"), uploads_index_path )  %>
                     <div class="overlay" style = "margin-top:45px;">
