sign up page and registration update

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,27 @@
-<h2 style = "color:white">Sign up</h2>
+<h2 style = "color:white">Registracion | Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email , style:"color:white" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
   
 <div class="field">
-<%= f.label :photo %><br />
-<%= f.file_field :avatar %><br />
+<%= f.label :photo  , style:"color:white" %><br />
+<%= f.file_field :avatar, style:"color:white"  %><br />
  </div>
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password  , style:"color:white"%>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em style = "color:white" >(<%= @minimum_password_length %> characters minimum), </em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation , style:"color:white" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
