--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,6 +71,9 @@
       </div>
        
     <%else %>
+        <a class="nav-link"> <%= link_to 'Registrate !' , new_user_registration_path, style:"font-size:1.2em" %> <b class="caret"></b>
+        </a>
+          <b class="caret"></b>
         <a class="nav-link"> <%= link_to 'Iniciar Seccion' , new_user_session_path, style:"font-size:1.2em" %> <b class="caret"></b>
         </a>
           <b class="caret"></b>
