--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -278,3 +278,69 @@ body, html {
     background-position: 5px 5px;
     padding: 8px 6px 8px 30px;
 }
+
+
+.share_container {
+  width: 80%;
+  margin: 4em auto;
+  
+  share_button {
+  border:none;
+  outline: none;
+  padding: 1em 1.5em;
+  font-size: 1rem;
+  margin-top: 2em;
+  cursor: pointer;
+  background: rgb(158, 0, 250);
+  color: white;
+  font-weight: bold;
+  will-change: background;
+  transition: background 1s;
+
+  &:hover {
+    background: rgb(229,0,250);
+  }
+}
+
+}
+
+.overlay {
+  
+  opacity: 1;
+  position:absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,.5);
+}
+
+.share, .overlay {
+  display: none;
+}
+.show-share {
+  display: block;
+}
+.share {
+  position: absolute;
+  left:0;
+  right:0;
+  top: 30%;
+  margin: auto;
+  width: 50%;
+  z-index: 1;
+  padding: 1em;
+  background: white;
+
+
+
+  #share_button {
+
+      border: none;
+      padding: .8em 1.2em;
+      margin-top: 3em;
+      width: 32%;
+      cursor: pointer;
+  }
+}
