--- a/app/views/home/recursos.html.erb
+++ b/app/views/home/recursos.html.erb
@@ -1,57 +1,52 @@
 <h1 style = "color:white" >Recursos</h1>
 
 
-<div class="region--sidebar-second region region-sidebar-second">
-    <div id="block-gethelp" class="block block-block-content block-block-contentd0089eef-125e-4a65-9ccf-db5759878e91">
-            
-  <h2 class="visually-hidden">Get Help</h2>
-  
 
-  <div class="block-content">
-          
-            <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item"><p><a href="//www.mentalhealth.gov/get-help/immediate-help" id="anch_53"><img alt="Get Immediate Help" data-entity-type="file" data-entity-uuid="2babeadf-3362-47de-b894-cb07363cc59a" src="//www.mentalhealth.gov/sites/default/files/inline-images/GetHelp.jpg"></a></p>
-</div>
-      
-      </div>
+
+
+<div class= "share_container">
+  <h1> Amazing Content </h1>
+  <p> Loren ipsum dolor</p>
+  <button id= "share_button"  style= "width:50px; height: 50px">Share thid story</button>
 </div>
 
-
-
-
-
-<div id="block-suicidelifeline" class="helpline block block-block-content block-block-content0606afb9-8eea-4b20-933b-7910f7868704">
-            
-  <h2 class="visually-hidden">Suicide Lifeline</h2>
-  
-
-  <div class="block-content">
-          
-            <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item"><p><a href="http://www.suicidepreventionlifeline.org/" id="anch_54"><img alt="National Suicide Prevention Lifeline. 1-800-273-8255(TALK)" data-entity-type="file" data-entity-uuid="10b96f05-0e34-4e1a-a6ad-a654b0c2b97d" src="//www.mentalhealth.gov/sites/default/files/inline-images/suicide-helpline.jpg"></a></p>
-
-<h3>1-800-273-8255 (TALK)</h3>
-</div>
-      
-      </div>
+<div class= "overlay"></div>
+<div class= "share">
+  <h2> Share now</h2>
+  <button>Social Link</button>
+  <button>Social Link</button>
+  <button>Social Link</button>
 </div>
 
 
+<script>
 
+const shareButton = document.querySelector('share_button');
+const overlay = document.querySelector('.overlay');
+const shareModal = document.querySelector('.share');
 
+const title = window.document.title;
+const url = window.document.location.href;
 
-<div id="block-veteranscrisisline" class="block block-block-content block-block-content902d2416-1d06-42ef-a2f4-ff0692fb817b">
-            
-  <h2 class="visually-hidden">Veterans Crisis Line</h2>
-  
+// Must be triggered some kind of "user activation"
+shareButton.addEventListener('click', async () => {
+      if (navigator.share) {
+          navigator.share({
+            title: ${title},
+            url: ${url}      
+          }).then (() => {
+              console.log("Thanks for sharing");
+          })
+          .catch(console.error);
+      } else {
+          overlay.classList.add('show-share');
+          shareModal.classList.add('show-share');
 
-  <div class="block-content">
-          
-            <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item"><p><a href="https://www.veteranscrisisline.net/" id="anch_55"><img alt="Veterans Crisis Line. 1-800-273-8255. Press 1." data-entity-type="file" data-entity-uuid="ce355f19-3c72-482b-bd05-56cd3f6f3973" src="//www.mentalhealth.gov/sites/default/files/inline-images/VeteransCrisisLine.jpg"></a></p>
-</div>
-      
-      </div>
-</div>
+      }
+})
 
-
-
-
-
+overlay.addEventListener('click', () => {
+  overlay.classList.remove('show-share');
+   shareModal.classList.remove('show-share');
+})
+</script>
