testing native share api

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -279,7 +279,7 @@ body, html {
     padding: 8px 6px 8px 30px;
 }
 
-
+/*
 .share_container {
   width: 80%;
   margin: 4em auto;
@@ -342,5 +342,9 @@ body, html {
       margin-top: 3em;
       width: 32%;
       cursor: pointer;
-  }
-}
+  }  */
+
+
+
+
+
