--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,12 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
+
+
+      <a href= "" ><%= image_tag("sharethis.png", class:"ssb-icon share-button translation-missing", ) %></a>
+ 
+   
+
 </div>
 </div>
 <div style = "margin-top = 50px">
@@ -181,6 +187,31 @@
 </script>
 
 <script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="url/to/your/button/whatsapp-button.js";h.appendChild(s);}</script>
+
+
+<script>
+  const shareButton = document.querySelector('.share-button');
+  const shareDialog = document.querySelector('.share-dialog');
+  const closeButton = document.querySelector('.close-button');
+
+  shareButton.addEventListener('click', event => {
+    if (navigator.share) { 
+     navigator.share({
+        title: 'WebShare API Demo',
+        url: 'https://codepen.io/ayoisaiah/pen/YbNazJ'
+      }).then(() => {
+        console.log('Thanks for sharing!');
+      })
+      .catch(console.error);
+      } else {
+          shareDialog.classList.add('is-open');
+      }
+  });
+
+  closeButton.addEventListener('click', event => {
+    shareDialog.classList.remove('is-open');
+  });
+</script>
 
 </body>
 
