--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -3,6 +3,7 @@
     <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Orientacion Familiar TV y Radio ' + request.original_url, url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+     <a href= "" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
 </div>
     </div>
 
@@ -39,4 +40,28 @@ setTimeout(function(){
 youtube_frame.children[2].childNodes[3].childNodes[3].style.zIndex = 0;
 youtube_frame.children[2].childNodes[2].childNodes[3].style.zIndex = 0;
 }, 5000);
+</script>
+
+<script>
+  const shareButton = document.querySelector('.share-button');
+  const shareDialog = document.querySelector('.share-dialog');
+  const closeButton = document.querySelector('.close-button');
+
+  shareButton.addEventListener('click', event => {
+    if (navigator.share) { 
+     navigator.share({
+        title: 'Orientacion Familiar TV y Radio',
+        url: request.original_url
+      }).then(() => {
+        alert('Thanks for sharing!');
+      })
+      .catch(console.error);
+      } else {
+          shareDialog.classList.add('is-open');
+      }
+  });
+
+  closeButton.addEventListener('click', event => {
+    shareDialog.classList.remove('is-open');
+  });
 </script>
