--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,10 @@
 
 <div class=  "social-share-button">
-    <%= rails_social_share_button_tag( request.original_url  + '  ' + @post.main_title , url: request.original_url , desc:  @post.main_title + ' Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+    <%= rails_social_share_button_tag( request.original_url  + '  ' + @post.main_title , url: request.original_url , desc:  @post.main_title + ' Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu') %>
 </div>
+
+<a href= "" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
+<body>
 <img src="<%= @post.main_image_post_url %>" class="img-fluid" alt="Responsive image">
 <div class= 'h1'>
   <%= @post.main_title %>
@@ -173,3 +176,28 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<script>
+  const shareButton = document.querySelector('.share-button');
+  const shareDialog = document.querySelector('.share-dialog');
+  const closeButton = document.querySelector('.close-button');
+
+  shareButton.addEventListener('click', event => {
+    if (navigator.share) { 
+     navigator.share({
+        title: @post.main_title,
+        url: request.original_url
+      }).then(() => {
+        alert('Thanks for sharing!');
+      })
+      .catch(console.error);
+      } else {
+          shareDialog.classList.add('is-open');
+      }
+  });
+
+  closeButton.addEventListener('click', event => {
+    shareDialog.classList.remove('is-open');
+  });
+</script>
+</body>
