--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,5 +1,6 @@
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag( request.original_url + " " + 'Audio podcasts', url: request.original_url, desc: " Escucha nuestros Audios y podcasts de Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+     <a href= "" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
 </div>
 <h1 style= "color:white">Seleccione de la lista para reproducir </h1>
 <div class="container">
@@ -21,5 +22,28 @@
   <%= link_to 'Subir Nuevo Audio Postcast',  new_upload_path, style:"color:white;font-size:25px" %>
   <% end %>
 
+<script>
+  const shareButton = document.querySelector('.share-button');
+  const shareDialog = document.querySelector('.share-dialog');
+  const closeButton = document.querySelector('.close-button');
+
+  shareButton.addEventListener('click', event => {
+    if (navigator.share) { 
+     navigator.share({
+        title: 'Audio Podcats de Orientacion Familiar una Guia Para el Hogar',
+        url: request.original_url
+      }).then(() => {
+        alert('Thanks for sharing!');
+      })
+      .catch(console.error);
+      } else {
+          shareDialog.classList.add('is-open');
+      }
+  });
+
+  closeButton.addEventListener('click', event => {
+    shareDialog.classList.remove('is-open');
+  });
+</script>
 
 
