--- a/app/views/uploads/show.html.erb
+++ b/app/views/uploads/show.html.erb
@@ -1,6 +1,7 @@
 <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag(request.original_url + "  " + @upload.title , url: request.original_url + "  " + @upload.title, desc: @upload.title + " Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
+     <a href= "" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
 </div>
 </div>
 </div>
@@ -11,6 +12,29 @@
 	<title>Audio Player</title>
 </head>
 <body>
+	<script>
+  const shareButton = document.querySelector('.share-button');
+  const shareDialog = document.querySelector('.share-dialog');
+  const closeButton = document.querySelector('.close-button');
+
+  shareButton.addEventListener('click', event => {
+    if (navigator.share) { 
+     navigator.share({
+        title: @upload.title,
+        url: request.original_url
+      }).then(() => {
+        alert('Thanks for sharing!');
+      })
+      .catch(console.error);
+      } else {
+          shareDialog.classList.add('is-open');
+      }
+  });
+
+  closeButton.addEventListener('click', event => {
+    shareDialog.classList.remove('is-open');
+  });
+</script>
 </body>
 </html>
 <audio controls="controls">
