--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -186,7 +186,7 @@
     if (navigator.share) { 
      navigator.share({
         title: @post.main_title,
-        url: request.original_url
+        url: <%= request.original_url %>
       }).then(() => {
         alert('Thanks for sharing!');
       })
