--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -190,15 +190,15 @@
 
 
 <script>
-  const shareButton = document.querySelector('.share-button');
-  const shareDialog = document.querySelector('.share-dialog');
-  const closeButton = document.querySelector('.close-button');
-
+  var shareButton = document.querySelector('.share-button');
+  var shareDialog = document.querySelector('.share-dialog');
+  var closeButton = document.querySelector('.close-button');
+ 
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
         title: 'Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Audios ,Reflexiones, Dr Jose Gil Abreu Home page',
-        url: request.original_url
+        url: <%= request.original_url %>
       }).then(() => {
         alert('Thanks for sharing!');
       })
