--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -3,7 +3,7 @@
     <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Orientacion Familiar TV y Radio ' + request.original_url, url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
-     <a href= "" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
+     <a href= "#" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
 </div>
     </div>
 
