fixing javscript for mobile device

--- a/app/views/home/recursos.html.erb
+++ b/app/views/home/recursos.html.erb
@@ -69,7 +69,7 @@ overlay.addEventListener('click', () => {
 
   <button class="share-button  ssb-icon" type="button" title=" ">
     <svg>
-      <use ><%= image_tag("sharethis.png") %></use>
+      <use ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png") %></use>
     </svg>
     <span>Share</span>
   </button>
@@ -85,7 +85,7 @@ overlay.addEventListener('click', () => {
     if (navigator.share) { 
      navigator.share({
         title: 'WebShare API Demo',
-        url: 'https://codepen.io/ayoisaiah/pen/YbNazJ'
+        url:  <% request.original_url %>
       }).then(() => {
         console.log('Thanks for sharing!');
       })
