--- a/app/views/home/recursos.html.erb
+++ b/app/views/home/recursos.html.erb
@@ -1,5 +1,6 @@
 
 <html>
+<head></head>
 <h1 style = "color:white" >Recursos</h1>
 
 
@@ -74,36 +75,31 @@ overlay.addEventListener('click', () => {
     <span>Share</span>
   </button>
 
-   <script>
+
+
+<script>
 
 
   const shareButton = document.querySelector('.share-button');
-  const shareDialog = document.querySelector('.share-dialog');
-  const closeButton = document.querySelector('.close-button');
 
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
         title: 'WebShare API Demo',
-        url:  <% request.original_url %>
+        url: 'https://codepen.io/ayoisaiah/pen/YbNazJ'
       }).then(() => {
         console.log('Thanks for sharing!');
       })
       .catch(console.error);
       } else {
-          shareDialog.classList.add('is-open');
+
       }
   });
 
-  closeButton.addEventListener('click', event => {
-    shareDialog.classList.remove('is-open');
-  });
+</script>
 
 
-  </script>
-
-
-  </body>
+</body>
 
 
  
