--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,12 @@
 
 
       <a href="#" class= "share-button"><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
+      <button class="share-button  ssb-icon" type="button" title=" ">
+    <svg>
+      <use ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png") %></use>
+    </svg>
+    <span>Share</span>
+  </button>
  
    
 
@@ -188,29 +194,25 @@
 
 
 <script>
-  var shareButton = document.querySelector('.share-button');
-  var shareDialog = document.querySelector('.share-dialog');
-  var closeButton = document.querySelector('.close-button');
- 
+
+
+  const shareButton = document.querySelector('.share-button');
+
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
-        title: 'Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Audios ,Reflexiones, Dr Jose Gil Abreu Home page',
-        url: <% request.original_url %>
+        title: request.original_url ,
+        url: 'https://codepen.io/ayoisaiah/pen/YbNazJ'
       }).then(() => {
         console.log('Thanks for sharing!');
       })
       .catch(console.error);
       } else {
-          shareDialog.classList.add('is-open');
+
       }
   });
 
-  closeButton.addEventListener('click', event => {
-    shareDialog.classList.remove('is-open');
-  });
 </script>
-
 </body>
 
 
