--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <%= rails_social_share_button_tag(request.original_url + "  Orientacion Familiar una guia para el hogar / Home page", url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu Home page") %>
 
 
-      <a href="#" class= "share-button"><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
+      <a href="#" class= "share-button"><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:" share-button ssb-icon  translation-missing", ) %></a>
       <button class="share-button  ssb-icon" type="button" title=" ">
     <svg>
       <use ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png") %></use>
@@ -15,7 +15,7 @@
 
 </div>
 </div>
-<div style = "margin-top = 50px">
+<div style = "margin-top = 45px">
 <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
 <ol class="carousel-indicators">
 <li data-target="#carousel" data-slide-to="0" class=""></li>
@@ -201,7 +201,7 @@
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
-        title: request.original_url ,
+        title: 'https://codepen.io/ayoisaiah/pen/YbNazJ' ,
         url: 'https://codepen.io/ayoisaiah/pen/YbNazJ'
       }).then(() => {
         console.log('Thanks for sharing!');
