--- a/app/views/home/recursos.html.erb
+++ b/app/views/home/recursos.html.erb
@@ -27,7 +27,7 @@
     if (navigator.share) { 
      navigator.share({
         title: 'WebShare API Demo',
-        url: 'https://codepen.io/ayoisaiah/pen/YbNazJ'
+        url: '<%= request.original_url %>'
       }).then(() => {
         console.log('Thanks for sharing!');
       })
