--- a/app/views/home/recursos.html.erb
+++ b/app/views/home/recursos.html.erb
@@ -26,7 +26,7 @@
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
-        title: 'WebShare API Demo',
+        title: 'Orientacion Familiar una Guia para el Hogar',
         url: '<%= request.original_url %>'
       }).then(() => {
         console.log('Thanks for sharing!');
