work in progress sharing button styling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 
   <button class="share-button  ssb-icon" type="button" title=" ">
     <svg>
-      <use ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png") %></use>
+      <use ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon") %></use>
     </svg>
     <span>Share</span>
   </button>
