--- a/app/views/home/radio.html.erb
+++ b/app/views/home/radio.html.erb
@@ -3,7 +3,7 @@
     <div class= "d-flex justify-content-center">
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag('Orientacion Familiar TV y Radio ' + request.original_url, url: request.original_url, desc: "Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu") %>
-     <a href= "#" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
+     <a href=""><%= image_tag("https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png", class:" share-button ssb-icon") %></a>
 </div>
     </div>
 
@@ -43,25 +43,24 @@ youtube_frame.children[2].childNodes[2].childNodes[3].style.zIndex = 0;
 </script>
 
 <script>
+
+
   const shareButton = document.querySelector('.share-button');
-  const shareDialog = document.querySelector('.share-dialog');
-  const closeButton = document.querySelector('.close-button');
 
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
-        title: 'Orientacion Familiar TV y Radio',
-        url: <%= request.original_url %>
+        title: 'Orientacion Familiar una Guia para el Hogar TV, RADIO, AUDIOS , Terapia familiar, individual y mas',
+        url: '<%= request.original_url %>' 
       }).then(() => {
-        alert('Thanks for sharing!');
+        console.log('Thanks for sharing!');
       })
       .catch(console.error);
       } else {
-          shareDialog.classList.add('is-open');
+
       }
   });
 
-  closeButton.addEventListener('click', event => {
-    shareDialog.classList.remove('is-open');
-  });
 </script>
+</body>
+
