--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
 <div class=  "social-share-button">
     <%= rails_social_share_button_tag( request.original_url  + '  ' + @post.main_title , url: request.original_url , desc:  @post.main_title + ' Orientacion Familiar Una Guia Para El Hogar; TV, Radio, Reflexiones, Dr Jose Gil Abreu') %>
 </div>
+<a href=""><%= image_tag("https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png", class:" share-button ssb-icon") %></a>
 
-<a href= "" ><%= image_tag("http://aux2.iconspalace.com/uploads/sharethis-icon-256-1927422772.png", class:"ssb-icon share-button translation-missing", ) %></a>
 <body>
 <img src="<%= @post.main_image_post_url %>" class="img-fluid" alt="Responsive image">
 <div class= 'h1'>
@@ -178,26 +178,23 @@
 <%= link_to 'Back', posts_path %>
 
 <script>
+
+
   const shareButton = document.querySelector('.share-button');
-  const shareDialog = document.querySelector('.share-dialog');
-  const closeButton = document.querySelector('.close-button');
 
   shareButton.addEventListener('click', event => {
     if (navigator.share) { 
      navigator.share({
-        title: @post.main_title,
-        url: <%= request.original_url %>
+        title: 'Orientacion Familiar una Guia para el Hogar TV ' + @post.main_title,
+        url: '<%= request.original_url %>' 
       }).then(() => {
-        alert('Thanks for sharing!');
+        console.log('Thanks for sharing!');
       })
       .catch(console.error);
       } else {
-          shareDialog.classList.add('is-open');
+
       }
   });
 
-  closeButton.addEventListener('click', event => {
-    shareDialog.classList.remove('is-open');
-  });
 </script>
 </body>
